--- a/stylesheets/scss_partials/_table_of_contents.scss
+++ b/stylesheets/scss_partials/_table_of_contents.scss
@@ -194,7 +194,7 @@ nav.nav-table-of-contents {
   margin-bottom: 0.4em;
   border-top: 0.2em solid #e6e6e3;
   margin-top: 1em;
-  color: #000;
+  color: $pitch-black;
 }
 
 .layout-table-of-contents ol li:first-of-type h1 {
